Fix Bug #59032- InnoDB data files for the same data are much bigger than in previous versions

There are two problems that need to be fixed.
      
 1. The purge batch size was in records, should have been in UNDO log pages.
    This caused trx_purge() to return 0 UNDO log pages processed for the case
    where multiple (20) small UNDO records fit into a single UNDO log page.
    This confused the caller into thinking that there are no more UNDO log
    to purge. This caused the caller to back off for sometime and in the
    meantime the UNDO records generated by user activity filled up the system
    tablespace.
      
 2. The black magic constants in srv_purge_coordinator_thread() are too
    conservative. I've made them a little aggressive.
      
Removed trx_purge_t::n_pages_handled, it is now a local variable.
      
Made the code more obvious in trx_purge_read_undo_rec(). This change doesn't
affect correctness. It was already doing the right thing.
      
Approved by Jimmy, rb://558.